--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">dollardash</string>
+    <string name="client_id">980444300578-vm0pved4mfah0c5ljk49ecq4q558v312.apps.googleusercontent.com</string>
 </resources>
